Minor changes to formatting. Remove hidden from select in HTML.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <form onsubmit="addTask(event)">
         <input id="task-name" type="text" placeholder="Task Name">
         <select id="task-priority">
-          <option value="" disabled selected hidden>Select Priority...</option>
+          <option value="" disabled selected>Select Priority...</option>
           <option value="low">Low Priority</option>
           <option value="medium">Medium Priority</option>
           <option value="high">High Priority</option>
@@ -37,7 +37,7 @@
         <li>No Tasks</li>
       </ul>
     </section>
-  
+
   </main>
 
 </body>
